kustomizations/apps/eppv2/preview/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epp
  namespace: epp
spec:
  rules:
  - host: ${app_hostname}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: epp-client
            port:
              number: 3000
  - host: ${storybook_hostname}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: epp-storybook
            port:
              number: 6006
